--- a/index.html
+++ b/index.html
@@ -13,13 +13,29 @@
 </head>
 
 <body>
-
-    <header>
-        <div>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="navbar-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="jumbotron">
+        <div id="header">
             <div>
-                <div>
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
+                <div class="row">
+                    <h1 class="col-sm-5">Ristorante con Fusion</h1>
+                    <p class="col-sm-7">We take inspiration from the World's best cuisines, and create a unique fusion
+                        experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div>
@@ -28,12 +44,12 @@
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 order-12">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
+            <div class="col-sm-7 order-1">
                 <h2>Uthappizza</h2>
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
                     ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -41,11 +57,11 @@
         </div>
 
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-sm-5 order-12">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div>
+            <div class="col-sm-7">
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
                     six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
@@ -53,11 +69,11 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-sm-5 order-12">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
+            <div class="col-sm-7">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with
@@ -67,19 +83,19 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="contaier">
         <div>
-            <div>
-                <div>
+            <div class="row" style="padding:50mm;">
+                <div class="col-sm-3">
                     <h5>Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-sm-6">
                     <h5>Our Address</h5>
                     <address>
                         121, Clear Water Bay Road<br>
@@ -90,15 +106,13 @@
                         Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div>
-                    <div>
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
-                    </div>
+                <div class="col-sm-3">
+                    <a href="http://google.com/+">Google+</a>
+                    <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
+                    <a href="http://www.linkedin.com/in/">LinkedIn</a>
+                    <a href="http://twitter.com/">Twitter</a>
+                    <a href="http://youtube.com/">YouTube</a>
+                    <a href="mailto:">Mail</a>
                 </div>
             </div>
             <div>
