button, forms and tables

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules\font-awesome\css\font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules\bootstrap-social\bootstrap-social.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -21,31 +24,25 @@
             <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="navbar-item active"><a class="nav-link" href="#">Home</a></li>
-                    <li class="navbar-item"><a class="nav-link" href="aboutus.html">About</a></li>
-                    <li class="navbar-item"><a class="nav-link" href="#">Menu</a></li>
-                    <li class="navbar-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="navbar-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>Home</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-info fa-lg"></span>About</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="jumbotron">
-        <div id="header">
-            <div>
-                <div class="row">
-                    <h1 class="col-sm-5">Ristorante con Fusion</h1>
-                    <p class="col-sm-7">We take inspiration from the World's best cuisines, and create a unique fusion
-                        experience. Our
-                        lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div>
-                </div>
-            </div>
+    <header class="jumbotron" id="header">
+        <div class="row row-header">
+            <h1 class="col-sm-5">Ristorante con Fusion</h1>
+            <p class="col-sm-7">We take inspiration from the World's best cuisines, and create a unique fusion
+                experience. Our
+                lipsmacking creations will tickle your culinary senses!</p>
         </div>
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-5 order-12">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -57,7 +54,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-5 order-12">
                 <h3>This Month's Promotions</h3>
             </div>
@@ -69,7 +66,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content">
             <div class="col-sm-5 order-12">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -92,7 +89,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6">
